# SHA-256

./: .gitignore  BIT_MECHANICS_COMPLETE.py  BIT_MECHANICS_FINAL.py  BIT_MECHANICS_THEORY.py  BIT_MECHANICS_v3.py  COMPLETE_MAP.py  INFO_THEORY_GUIDE.md  MATH_SYNTHESIS.py  METHODOLOGY.md  METHODOLOGY_V22_COMPLETE.md  METHODOLOGY_V22_PART1.md  METHODOLOGY_V22_PART2.md  METHODOLOGY_V22_PART3.md  METHODOLOGY_V22_PART4.md  METHODOLOGY_V22_PART5.md  UNIFIED_METHODOLOGY.md  adam_incremental.c  anyonic_phases.c  axis_dependencies.c  birthday_proof_complete.md  bit_70percent.py  bit_83_wall.py  bit_9_principles.py  bit_alpha_T_synthesis.py  bit_alpha_equals_T.py  bit_anti_search.py  bit_approx_redundancy.py  bit_assembly.py  bit_astronomy.md  bit_attraction.py  bit_beyond.py  bit_birds_eye.py  bit_brainstorm.py  bit_breakthrough.py  bit_calculus.c  bit_catalog_dynamic.py  bit_catalog_energy.py  bit_catalog_info_topo.py  bit_catalog_relational.py  bit_catalog_static.py  (+531 more)
scalping-bot/: .env.example  .gitignore  README.md  pyproject.toml
scalping-bot/scripts/: demo_run.py  intuition_demo.py  leverage_experiment.py  multi_day_demo.py  pattern_match_demo.py  selectivity_sweep.py  sigma_gating_experiment.py  sizing_sweep.py  trailing_demo.py
scalping-bot/src/scalping_bot/: __init__.py  __main__.py  cli.py
scalping-bot/src/scalping_bot/backtest/: __init__.py  engine.py  metrics.py  runner.py  strategy.py
scalping-bot/src/scalping_bot/config/: __init__.py  settings.py
scalping-bot/tests/: test_accounting.py  test_backtest.py  test_cli.py  test_collector.py  test_config.py  test_features.py  test_features_orderbook.py  test_historical.py  test_intuition.py  test_intuition_trader.py  test_kill_switch.py  test_live.py  test_logging.py  test_models.py  test_monitor.py  test_orderbook.py  test_pattern_match.py  test_recorder.py  test_risk_limits.py  test_super_state.py  test_trailing.py
superbit/: core.py  (+5 more)
(+647 files in other folders)
