[project]
name = "scalping-bot"
version = "0.0.1"
description = "BTC perpetual scalping bot — risk-first architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "python-dotenv>=1.0,<2",
    "pybit>=5.10",
    "polars>=1.15",
    "pyarrow>=18.0",
    "websocket-client>=1.8",
    "httpx>=0.28",
    "tqdm>=4.66",
    "numpy>=2.1",
    "scikit-learn>=1.5",
    "joblib>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.115",
    "freezegun>=1.5",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalping_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --tb=short"

[tool.coverage.run]
source = ["src/scalping_bot"]
branch = true
omit = [
    # Thin IO wrappers around pybit's threaded WebSocket — cannot unit-test
    # without a live connection; covered by manual smoke runs.
    "src/scalping_bot/market_data/bybit_ws.py",
    # Module runner entry-point is trivial.
    "src/scalping_bot/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]  # σ in docs/strings is intentional

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pybit.*", "sklearn.*", "joblib"]
ignore_missing_imports = true
